# house-accounting

./: .gitignore  README.md  manage.py  pyproject.toml  seed.sql
charts/: models.py  services.py  views.py
charts/migrations/: 0001_initial.py  0002_metricvalue_value.py
config/: admin.py  models.py  services.py
config/migrations/: 0001_initial.py
docs/: ARCHITECTURE.md  HOWTO.md
docs/sample_data_parsed/: Accounts.csv
entities/: admin.py  interfaces.py  models.py
entities/migrations/: 0001_initial.py  0002_account_inception_date_account_initial_balance.py
house_accounting/: asgi.py  settings.py  test_api.py  urls.py  wsgi.py
house_accounting/test-input-data-0/: Accounts.csv
householdentities/: admin.py  apps.py  models.py  services.py
householdentities/migrations/: 0001_initial.py
imported/: admin.py  apps.py  interfaces.py  models.py  services.py
imported/migrations/: 0001_initial.py  0002_transaction_account.py
importing/: admin.py  models.py  parsers.py  services.py
importing/migrations/: 0001_initial.py  0002_vendortransactionidmap.py  0003_vendortransactionidmap_uniq_vendor_trx_id_map.py  0004_remove_vendortransactionidmap_uniq_vendor_trx_id_map_and_more.py
importing/validators/: importing.py  parsing.py
market_data/: admin.py  models.py  services.py
market_data/migrations/: 0001_initial.py  0002_bds_israel_values_20250920.py
templates/: base.html  current-balance.html
transactions/: admin.py  models.py  services.py
transactions/migrations/: 0001_initial.py  0002_transaction_vendor.py
utils/: dates.py  it.py
(+11 files in other folders)
