[project]
name = "house-accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2.23",
    "pypdfium2>=4.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "house_accounting.settings"
